{
    "name": "DebugActions",
    "maps": [
        {
            "name": "DebugTools",
            "id": "2cb31f18-a3a3-47ca-9cd2-2f5a2684c6db",
            "actions": [
                {
                    "name": "SpawnEnemy",
                    "type": "Button",
                    "id": "53605756-c6e6-40f1-83a8-7a17aa73fff1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseLocation",
                    "type": "Value",
                    "id": "163143e1-2f33-4c1d-9163-df86f7d3161c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "359e838e-7a56-4fc7-a5fc-ad950100b6f1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19173ce2-ee0a-4adb-a4f2-e5fc1103efb0",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLocation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "M&K",
            "bindingGroup": "M&K",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}